# unlearning_fingertips

./: AGENTS.md  PROPOSAL.md  README.md  eval_accuracy.py  open-unlearning.patch  pyproject.toml  regen_samples.py  requirements.txt  results.json  train_log.jsonl  train_manifest.json  train_pipeline.py  train_strong_log.jsonl  train_strong_manifest.json  train_strong_pipeline.py
experiments/: EXPLANATION.md  MATH.md  common.py  detect.py  mia.py  samples.py  spectral.py  weights.py
fast_experiments/: log_utils.py  reproduction.py  reproduction_tofu.ipynb  reproduction_tofu_xpu.py  reproduction_xpu.py  visualize.py
logs_tofu/: dataset_forget10_forget.json  dataset_forget10_forget.npz  dataset_forget10_within.json  dataset_forget10_within.npz  mlp_forget10_forget_200samples_metrics.json  mlp_forget10_within_200samples_metrics.json  results_tofu.json  sample_outputs.json
train_output/samples/: accuracy_summary.json  base_Qwen2.5-1.5B-Instruct.json  base_Qwen2.5-3B-Instruct.json  finetune_Phi-3.5-mini-instruct_full.json  finetune_Phi-3.5-mini-instruct_retain90.json  finetune_Qwen2.5-1.5B-Instruct_full.json  finetune_Qwen2.5-1.5B-Instruct_retain90.json  finetune_Qwen2.5-3B-Instruct_full.json  finetune_Qwen2.5-3B-Instruct_retain90.json  unlearn_Phi-3.5-mini-instruct_GradAscent.json  unlearn_Phi-3.5-mini-instruct_GradDiff.json  unlearn_Phi-3.5-mini-instruct_NPO.json  unlearn_Phi-3.5-mini-instruct_RMU.json  unlearn_Phi-3.5-mini-instruct_SimNPO.json  unlearn_Qwen2.5-1.5B-Instruct_GradAscent.json  unlearn_Qwen2.5-1.5B-Instruct_GradDiff.json  (+8 more)
(+133 files in other folders)
