[project]
name = "unlearn-fingertips"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.23.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    "torch>=2.2",
    "transformers>=5.13.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
